Partially implemented the QueryRefiner