@@ -1,6 +1,8 @@
 package de.medizininformatikinitiative.medgraph.searchengine.algorithm.querymanagement;
 
+import de.medizininformatikinitiative.medgraph.TestFactory;
 import de.medizininformatikinitiative.medgraph.UnitTest;
+import de.medizininformatikinitiative.medgraph.searchengine.model.SearchQuery;
 import de.medizininformatikinitiative.medgraph.searchengine.provider.BaseProvider;
 import de.medizininformatikinitiative.medgraph.searchengine.provider.MappedIdentifier;
 import org.junit.jupiter.api.BeforeEach;
@@ -9,29 +11,22 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static de.medizininformatikinitiative.medgraph.TestFactory.DoseForms.*;
-import static de.medizininformatikinitiative.medgraph.searchengine.algorithm.querymanagement.DoseFormQueryParser.*;
+import static de.medizininformatikinitiative.medgraph.searchengine.algorithm.querymanagement.DoseFormQueryRefiner.Result;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Markus Budeus
  */
-public class DoseFormQueryParserTest extends UnitTest {
+public class DoseFormQueryRefinerTest extends UnitTest {
 
-	private final BaseProvider<String> edqmProvider = BaseProvider.ofIdentifiers(List.of(
-			new MappedIdentifier<>("Oral Granules", GRANULES),
-			new MappedIdentifier<>("Granules", Characteristics.GRANULES),
-			new MappedIdentifier<>("Oral", Characteristics.ORAL),
-			new MappedIdentifier<>("solution for injection", SOLUTION_FOR_INJECTION),
-			new MappedIdentifier<>("Powder for solution for injection", POWDER_FOR_SOLUTION_FOR_INJECTION)
-	));
-
-	private DoseFormQueryParser sut;
+	private DoseFormQueryRefiner sut;
 
 	@BeforeEach
 	void setUp() {
-		sut = new DoseFormQueryParser(edqmProvider);
+		sut = new DoseFormQueryRefiner(TestFactory.EDQM_PROVIDER);
 	}
 
 	@Test
@@ -45,8 +40,8 @@ public class DoseFormQueryParserTest extends UnitTest {
 	@Test
 	void simpleMatch() {
 		Result result = sut.parse("Tranexamic acid granules");
-		assertEquals(Collections.emptyList(), result.getDoseForms());
-		assertEquals(List.of(Characteristics.GRANULES), result.getCharacteristics());
+		assertEquals(List.of(GRANULES), result.getDoseForms());
+		assertEquals(Collections.emptyList(), result.getCharacteristics());
 		assertEquals("granules", result.getUsageStatement().getUsedParts().trim());
 	}
 
@@ -54,7 +49,7 @@ public class DoseFormQueryParserTest extends UnitTest {
 	void multiMatch() {
 		Result result = sut.parse("Prednisolon oral granules");
 		assertEquals(List.of(GRANULES), result.getDoseForms());
-		assertEquals(Collections.emptySet(), new HashSet<>(result.getCharacteristics()));
+		assertEquals(List.of(Characteristics.ORAL), result.getCharacteristics());
 		assertEquals("oral granules", result.getUsageStatement().getUsedParts().trim());
 	}
 
@@ -68,9 +63,24 @@ public class DoseFormQueryParserTest extends UnitTest {
 
 	@Test
 	void multiMatchWithOverlap() {
-		Result result = sut.parse("Prednisolon oral powder for solution for injection"); // Yeah I know this one makes no sense...
+		Result result = sut.parse(
+				"Prednisolon oral powder for solution for injection"); // Yeah I know this one makes no sense...
 		assertEquals(List.of(POWDER_FOR_SOLUTION_FOR_INJECTION), result.getDoseForms());
 		assertEquals(List.of(Characteristics.ORAL), result.getCharacteristics());
 		assertEquals("oral powder for solution for injection", result.getUsageStatement().getUsedParts().trim());
+	}
+
+	@Test
+	void incrementallyApply() {
+		Result r1 = sut.parse("Prednisolon parenteral solution for injection");
+		Result r2 = sut.parse("Tranexamsäure oral granules parenteral");
+
+		SearchQuery.Builder builder = new SearchQuery.Builder();
+		r1.incrementallyApply(builder);
+		r2.incrementallyApply(builder);
+		SearchQuery query = builder.build();
+
+		assertEquals(List.of(SOLUTION_FOR_INJECTION, GRANULES), query.getDoseForms());
+		assertEquals(Set.of(Characteristics.ORAL, Characteristics.PARENTERAL), new HashSet<>(query.getDoseFormCharacteristics()));
 	}
 }
